--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "konva": "^2.5.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-konva": "^16.6.31",
     "react-scripts": "2.1.1"
   },
   "scripts": {
