--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "konva": "^2.5.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
